@@ -1,15 +1,51 @@
+plugins {
+    id 'org.springframework.boot' version '3.0.6'
+    id 'io.spring.dependency-management' version '1.1.0'
+    id 'org.graalvm.buildtools.native' version '0.9.20'
+}
+
+
 allprojects {
-    apply plugin: 'java'
-
-    group = 'com.ruppyrup'
-    version = '0.0.1-SNAPSHOT'
-    sourceCompatibility = '20'
-
     repositories {
         mavenCentral()
     }
 }
 
 subprojects {
+    apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
+    apply plugin: 'org.graalvm.buildtools.native'
+    apply plugin: 'java'
 
+    group = 'com.ruppyrup'
+    version = '0.0.1-SNAPSHOT'
+    sourceCompatibility = '20'
+
+    tasks.named('test') {
+        jvmArgs += "--enable-preview"
+        useJUnitPlatform()
+    }
+
+    configurations {
+        compileOnly {
+            extendsFrom annotationProcessor
+        }
+    }
+
+    dependencies {
+        implementation 'org.springframework.boot:spring-boot-starter-web'
+        implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+        developmentOnly 'org.springframework.boot:spring-boot-devtools'
+        annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+        runtimeOnly 'com.h2database:h2'
+        testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    }
+
+    tasks.withType(JavaCompile) {
+        options.compilerArgs += "--enable-preview"
+    }
+
+    tasks.withType(JavaExec) {
+        jvmArgs += '--enable-preview'
+    }
 }
